test/files/neg/macro-cyclic.check
Impls_Macros_1.scala:6: error: could not find implicit value for parameter e: SourceLocation
    c.universe.reify { implicitly[SourceLocation] }
                                 ^
1 error
